Q9/module/instance/main.tf
provider "aws" {
  region = "ap-south-1"
}

resource "aws_security_group" "ssh_sg" {
  name_prefix = "ssh-allow-"

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "allow_ssh"
  }
}

resource "aws_instance" "instance" {
  ami       = var.ami
  instance_type = var.type
  key_name = "my-key-pair"
  vpc_security_group_ids = [aws_security_group.ssh_sg.id]
  tags = {
    Name = var.name
  }
}
